--- a/app/views/images/index.html.haml
+++ b/app/views/images/index.html.haml
@@ -1,24 +1,25 @@
 .header
   .header--title
     = link_to "TURN ALBUM", root_path
-
-  .header--info
-    = link_to "アカウント情報", edit_user_registration_path, class: 'btn'
   .header--logout
     = link_to "ログアウト", destroy_user_session_path, method: :delete, class: 'btn'
+  .header--info
+    = link_to "アカウント情報", edit_user_registration_path, class: 'btn'
+  
 
 
 .body
   .body--menu
     メニュー
     .body--menu--btn
-      画像をアップロード
-
-    .body--menu--btn
-      画像にタグ付け
-
-    .body--menu--btn
-      アルバム作成
-
-    .body--menu--btn
-      アルバム再生
+      .body--menu--btn--upl
+        画像をアップロード
+  
+      .body--menu--btn--tag
+        画像にタグ付け
+  
+      .body--menu--btn--cre
+        アルバム作成
+  
+      .body--menu--btn--pla
+        アルバム再生
